--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@miblanchard/react-native-slider": "^2.6.0",
+    "@react-native-community/image-editor": "^4.2.1",
     "expo": "~51.0.26",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
