--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@expo/metro-runtime": "~3.2.3",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-community/image-editor": "^4.2.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.26",
     "expo-image-picker": "^15.0.7",
     "expo-status-bar": "~1.12.1",
@@ -20,6 +22,7 @@
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
