--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/gl-react-expo": "^3.16.7",
     "expo": "~51.0.26",
     "expo-gl": "~14.0.2",
+    "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "^15.0.7",
     "expo-media-library": "^16.0.4",
     "expo-modules-core": "*",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
+    "react-native-expo-image-cropper": "^1.0.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
