--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.74.5",
     "react-native-expo-image-cropper": "^1.0.2",
+    "react-native-image-size": "^1.1.6",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
