--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,10 +13,17 @@
     "@expo/metro-runtime": "~3.2.3",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-community/image-editor": "^4.2.1",
+    "@react-native-community/toolbar-android": "^0.2.1",
+    "@react-native/codegen": "^0.76.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@types/gl-react-expo": "^3.16.7",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
+    "expo-asset": "^10.0.10",
+    "expo-build-properties": "~0.12.5",
+    "expo-dev-client": "~4.0.29",
+    "expo-file-system": "^17.0.1",
+    "expo-font": "^12.0.10",
     "expo-gl": "~14.0.2",
     "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "^15.0.7",
@@ -28,7 +35,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-expo-image-cropper": "^1.0.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -40,6 +46,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
+    "react-native-codegen": "^0.70.7",
     "typescript": "~5.3.3"
   },
   "private": true,
