--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/gl-react-expo": "^3.16.7",
     "expo": "~51.0.39",
     "expo-asset": "^10.0.10",
+    "expo-blur": "^14.0.1",
     "expo-build-properties": "~0.12.5",
     "expo-dev-client": "~4.0.29",
     "expo-file-system": "^17.0.1",
