--- a/package.json
+++ b/package.json
@@ -10,46 +10,43 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.1.6",
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@miblanchard/react-native-slider": "^2.6.0",
-    "@react-native-community/image-editor": "^4.2.1",
     "@react-native-community/toolbar-android": "^0.2.1",
     "@react-native/codegen": "^0.76.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@types/gl-react-expo": "^3.16.7",
-    "expo": "~51.0.39",
-    "expo-asset": "^10.0.10",
+    "expo": "~52.0.11",
+    "expo-asset": "~11.0.1",
     "expo-blur": "^14.0.1",
-    "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.29",
-    "expo-file-system": "^17.0.1",
-    "expo-font": "^12.0.10",
-    "expo-gl": "~14.0.2",
-    "expo-image-manipulator": "~12.0.5",
-    "expo-image-picker": "^15.0.7",
-    "expo-media-library": "~16.0.5",
-    "expo-modules-core": "~1.12.26",
-    "expo-status-bar": "~1.12.1",
-    "gl-react": "^5.2.0",
-    "gl-react-expo": "^5.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo-build-properties": "~0.13.1",
+    "expo-dev-client": "~5.0.4",
+    "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
+    "expo-gl": "~15.0.2",
+    "expo-image-manipulator": "~13.0.5",
+    "expo-image-picker": "~16.0.3",
+    "expo-media-library": "~17.0.3",
+    "expo-modules-core": "~2.0.6",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-paper": "^5.12.5",
+    "react-native-root-siblings": "5.0.1",
     "react-native-root-toast": "^3.6.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "4.3.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10",
-    "webgltexture-loader-expo": "^2.0.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
     "react-native-codegen": "^0.70.7",
-    "typescript": "~5.3.3"
+    "typescript": "5.7.2"
   },
   "private": true,
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
